--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,17 +9,19 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_gravity="center|center_horizontal"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="150dp"
         android:src="@mipmap/ic_launcher"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <com.developer.gbuttons.GoogleSignInButton
         android:id="@+id/signInButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="250dp"
-        android:layout_marginBottom="10dp" />
+        android:layout_gravity="center|bottom"
+        android:layout_marginTop="200dp"
+        android:layout_marginBottom="10dp"
+        android:text="@string/google_sign_up"
+        app:isDarkTheme="true"/>
 
 </LinearLayout>
