--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -52,7 +52,7 @@
                 android:text="@string/str_emercy" />
 
             <EditText
-                android:id="@+id/et_number"
+                android:id="@+id/phonetxt"
                 android:layout_width="200dp"
                 android:textColor="@color/colorWhite"
                 android:layout_height="wrap_content"
@@ -62,7 +62,7 @@
                 android:inputType="phone" />
 
             <Button
-                android:id="@+id/btn_update_emer"
+                android:id="@+id/phoneupdate"
                 android:textColor="@color/colorWhite"
                 android:layout_width="wrap_content"
                 android:background="@color/colorPrimaryIcon"
@@ -92,7 +92,7 @@
                 android:text="@string/str_device" />
 
             <EditText
-                android:id="@+id/et_device"
+                android:id="@+id/devicetxt"
                 android:layout_width="200dp"
                 android:textColor="@color/colorWhite"
                 android:layout_height="wrap_content"
@@ -101,7 +101,7 @@
                 android:layout_marginBottom="10dp" />
 
             <Button
-                android:id="@+id/btn_update_device"
+                android:id="@+id/deviceupdate"
                 android:layout_width="wrap_content"
                 android:background="@color/colorPrimaryIcon"
                 android:layout_height="wrap_content"
