--- a/app/src/main/res/layout/list_layout.xml
+++ b/app/src/main/res/layout/list_layout.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="88dp"
         android:layout_margin="5dp"
-        >
+        app:cardBackgroundColor="#E40000">
 
         <LinearLayout
             android:id="@+id/linearlayout"
