--- a/app/src/main/res/layout/fragment_overall.xml
+++ b/app/src/main/res/layout/fragment_overall.xml
@@ -18,8 +18,6 @@
         <TextView
             android:id="@+id/tv_overall"
             android:layout_width="wrap_content"
-
-
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="28dp"
@@ -27,6 +25,15 @@
             android:textSize="40sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/graphView"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            app:layout_constraintTop_toBottomOf="@id/tv_overall"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"/>
 
         <TextView
             android:id="@+id/textView2"
