--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -119,8 +119,9 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
             android:text="@string/str_alert"
-            android:textSize="14sp"
             android:textColor="@color/colorWhite"
+            android:textSize="14sp"
+            android:visibility="invisible"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/frame_device" />
 
@@ -128,9 +129,11 @@
             android:id="@+id/cb_call"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorWhite"
             android:layout_marginStart="20dp"
+            android:checked="true"
+            android:clickable="false"
             android:text="@string/str_emercall"
+            android:textColor="@color/colorWhite"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cb_alert" />
